crates/djls-python/tests/snapshots/corpus__extraction_snapshots@packages__django-5.2__django__contrib__admin__templatetags__admin_list.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/django-5.2/django/contrib/admin/templatetags/admin_list.py
---
tag_rules:
  "django.contrib.admin.templatetags.admin_list::tag::admin_list_filter":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: cl
        required: true
        kind: Variable
        position: 0
      - name: spec
        required: true
        kind: Variable
        position: 1
    supports_as_var: true
  "django.contrib.admin.templatetags.admin_list::tag::paginator_number":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: cl
        required: true
        kind: Variable
        position: 0
      - name: i
        required: true
        kind: Variable
        position: 1
    supports_as_var: true
filter_arities: {}
block_specs: {}
