crates/djls-python/tests/snapshots/corpus__extraction_snapshots@packages__django-5.2__django__contrib__admin__templatetags__log.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/django-5.2/django/contrib/admin/templatetags/log.py
---
tag_rules:
  "django.contrib.admin.templatetags.log::tag::get_admin_log":
    arg_constraints:
      - Min: 4
    required_keywords:
      - position:
          Forward: 2
        value: as
      - position:
          Forward: 4
        value: for_user
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
      - name: as
        required: true
        kind:
          Literal: as
        position: 1
      - name: arg3
        required: true
        kind: Variable
        position: 2
      - name: for_user
        required: true
        kind:
          Literal: for_user
        position: 3
    supports_as_var: false
filter_arities: {}
block_specs: {}
